--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       <p>Here is static content in the web page. You'll notice that it gets replaced by our app as soon as we start it.</p>
     </div>
 
+    <div id="dialog-region">
+      
+    </div>
+    
     <script type="text/template" id="static-template">
       <p>This is a text that rendered be our Marionette app.</p>
     </script>
@@ -39,6 +43,10 @@
       <td><%= firstName %></td>  <td><%= lastName %></td>
       <td>
         <a href="#/contacts/<%= id %>" class="btn btn-default btn-sm js-show"><span class="glyphicon glyphicon-eye-open">Show</span> </a>
+        <a href="#contacts/<%- id %>/edit" class="btn btn-small js-edit">
+          <i class="icon-pencil"></i>
+          Edit
+        </a>
         <button class="btn btn-default btn-sm js-delete"><span class="glyphicon glyphicon-remove">Delete</span></button>
       </td>
     </script>
