--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
       </form>
     </script>
 
+    <script type="text/template" id="contact-list-layout"> 
+      <div id="panel-region"></div>
+      <div id="contacts-region"></div>
+    </script>
+
+    <script type="text/template" id="contact-list-panel"> 
+      <button class="btn btn-primary js-new">New contact</button>
+    </script>
+
+
 
        
 
