--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
      <script src=  "./assets/js/app.js"></script>
      <script src="./assets/js/apps/config/storage/localstorage.js"></script>
      <script src="./assets/js/common/views.js"></script>
+     <script src="./assets/js/apps/common/views.js"></script>
      <script src="./assets/js/entities/contact.js"></script>
      <script src="./assets/js/apps/contacts/list/list_view.js"></script>
      <script src="./assets/js/apps/contacts/list/list_controller.js"></script>
@@ -135,6 +136,7 @@
      <script src="./assets/js/apps/contacts/contacts_app.js"></script>
      <script src="./assets/js/apps/contacts/edit/edit_view.js"></script>
      <script src="./assets/js/apps/contacts/edit/edit_controller.js"></script>
+     <script src="./assets/js/apps/contacts/new/new_view.js"></script>
      
   
     
