--- a/index.html
+++ b/index.html
@@ -103,10 +103,19 @@
       <div id="contacts-region"></div>
     </script>
 
-    <script type="text/template" id="contact-list-panel"> 
+    <script type="text/template" id="contact-list-panel">
       <button class="btn btn-primary js-new">New contact</button>
+      <form id="filter-form" class="form-search form-inline pull-right">
+        <div class="input-append">
+          <input type="text" class="span2 search-query js-filter-criterion">
+          <button type="submit" class="btn">Filter contacts</button>
+        </div>
+      </form>
     </script>
 
+    <script type="text/template" id="contact-list-none">
+      <td colspan="3">No contacts to display.</td>
+    </script>
 
 
        
@@ -124,8 +133,10 @@
     <script src="./assets/js/vendor/backbone.marionette.js"></script>
     <script src=  "./assets/js/vendor/spin.js"></script>
     <script src=  "./assets/js/vendor/spin.jquery.js"></script>
+     <script src="./assets/js/apps/config/marionette/regions/dialogs.js"></script>
      <script src=  "./assets/js/app.js"></script>
      <script src="./assets/js/apps/config/storage/localstorage.js"></script>
+     <script src="./assets/js/entities/common.js"></script>
      <script src="./assets/js/common/views.js"></script>
      <script src="./assets/js/apps/common/views.js"></script>
      <script src="./assets/js/entities/contact.js"></script>
