linking filtering to routes

--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@
       <td colspan="3">No contacts to display.</td>
     </script>
 
+    <script type="text/template" id="about-message">
+      <h1>About this application</h1>
+      <p>This application was designed to
+      accompany you during your learning.</p>
+      <p>Hopefully, it has served you well !</p>
+    </script>
+
 
        
 
