--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
      <script src="./assets/js/apps/contacts/edit/edit_view.js"></script>
      <script src="./assets/js/apps/contacts/edit/edit_controller.js"></script>
      <script src="./assets/js/apps/contacts/new/new_view.js"></script>
+     <script src="./assets/js/apps/about/about_app.js"></script>
+     <script src="./assets/js/apps/about/show/show_view.js"></script>
+     <script src="./assets/js/apps/about/show/show_controller.js"></script>
      
   
     
